src/solution/sigmaott-livestream-channel/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-livestream-channel
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
    spec:
      containers:
      - name: api-livestream-channel
        image: registry.gviet.vn:5000/sigma-livestream/livestream-channel:1.0.0-beta
        imagePullPolicy: ""
        # livenessProbe:
        #   exec:
        #     command:
        #     - node scripts/healthcheck.js
        #   failureThreshold: 3
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 10
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
