src/solution/sigmaott-livestream-channel/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-livestream-channel
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 80
    protocol: TCP
