src/solution/sigmaott-livestream-channel/base/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-livestream-channel
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/srs`)
      services:
        - kind: Service
          name: api-livestream-channel
          port: 80
          strategy: RoundRobin
    - kind: Rule
      match: PathPrefix(`/livestream`)
      services:
        - kind: Service
          name: api-livestream-channel
          port: 80
          strategy: RoundRobin
    - kind: Rule
      match: PathPrefix(`/stats`)
      services:
        - kind: Service
          name: api-livestream-channel
          port: 80
          strategy: RoundRobin
